<resources>
    <string name="app_name">TrackBooks</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="isbn_number">ISBN Number</string>
    <string name="add_book">Add book</string>
    <string name="page_numbers">Page Numbers</string>
    <string name="invalid_isbn">invalid isbn number</string>
    <string name="book_success_add">Book was successfuly added</string>
    <string name="book_success_update">Book was successfuly updated</string>
    <string name="book_success_delete">Book was successfuly deleted</string>
    <string name="unknown_error">Something went wrong</string>
</resources>
